2013-08-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/integria_cron.php: New functions:
	"delete_old_sessions_data", "delete_old_wo_data",
	"delete_old_wu_data", "delete_old_event_data" and
	"delete_old_audit_data". Improved the function
	"delete_old_incidents".
	
	* operation/projects/task.php
	  include/functions_tasks.php: Now the task tree
	only shows the name with grey background for the
	tasks without read permission by the user.
	
	* godmode/setup/setup_maintenance.php: Now all the
	parameters of this setup section have help files.
	
	* include/help/en/help_old_audit.php
	  include/help/es/help_old_audit.php
	  include/help/en/help_old_events.php
	  include/help/es/help_old_events.php
	  include/help/en/help_old_incidents.php
	  include/help/es/help_old_incidents.php
	  include/help/en/help_old_sessions.php
	  include/help/es/help_old_sessions.php
	  include/help/en/help_old_wo.php
	  include/help/es/help_old_wo.php
	  include/help/en/help_old_wu.php
	  include/help/es/help_old_wu.php: Added help files.

2013-08-01  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_inventories.php: Removed sql errors.

2013-08-01  Vanessa Gil <vanessa.gil@artica.es>

	* include/ajax/license.php: Added file.

2013-08-01  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  integria_dbdata.sql
	  extras/migrate.sql
	  godmode/setup/setup.php
	  include/functions_db.mysql.php
	  include/js/integria.js
	  include/styles/integria.css: Added keygen.
	
	* images/license_key.png
	  include/js/jquery.jquery-ui-1.1.0.custom.js
	  include/styles/jquery-ui-1.10.0.custom.css: Added files.


2013-07-31  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/integria_cron.php: Changed a deprecated
	function.
	
	* integria_dbdata.sql
	  integria_demo.sql: Added the default values for
	the new maintenance config tokens.
	
	* godmode/setup/setup_maintenance.php: New file.
	Setup section where config the days to delete
	some old data.
	